--- a/config/gregicprobe.cfg
+++ b/config/gregicprobe.cfg
@@ -44,7 +44,7 @@ general {
     B:DisplaySecondProgress=true
 
     # If true, the name of the fluid will be displayed [default: true]
-    B:ShowFluidName=false
+    B:ShowFluidName=true
 
     # If true, the name of the item will be displayed [default: true]
     B:ShowItemName=false
